Create Product List
Make the card box with picture, info, and stars

--- a/eCommerceTest/template/index.html
+++ b/eCommerceTest/template/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,17 +21,131 @@
                 <a href="signin.html">Cadastre</a>
             </div>
         </header>
-
- 
-        <!--  -->
+   
+        <!--  - ->
         <main>
-            <ul>
-                <li>Produto 1</li>
-                <li>Produto 2</li>
-                <li>Produto 3</li>
-                <li>Produto 4</li>
-                <li>Produto 5</li>
-            </ul>
+            <!-- row center tem o comando flex para colocar itens um do lado do outro -->
+            <div class="row center">
+                
+                <div class="card">
+                    <a href="product.html">
+                        <!-- image size should be 680px by 830px -->
+                        <img class="medium" src="./images/Fig 1.png" alt="product 1">
+                    </a>
+                    <div class="card-body">
+                        <a href="product.html">
+                            <h2>Roupa Cara</h2>
+                        </a>
+                    </div>
+                    <div class="rating">
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                    </div>
+                    <div class="price">
+                        R$ 300
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <a href="product.html">
+                        <!-- image size should be 680px by 830px -->
+                        <img class="medium" src="./images/Fig 1.png" alt="product 1">
+                    </a>
+                    <div class="card-body">
+                        <a href="product.html">
+                            <h2>Roupa Cara</h2>
+                        </a>
+                    </div>
+                    <div class="rating">
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                    </div>
+                    <div class="price">
+                        R$ 300
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <a href="product.html">
+                        <!-- image size should be 680px by 830px -->
+                        <img class="medium" src="./images/Fig 1.png" alt="product 1">
+                    </a>
+                    <div class="card-body">
+                        <a href="product.html">
+                            <h2>Roupa Cara</h2>
+                        </a>
+                    </div>
+                    <div class="rating">
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                    </div>
+                    <div class="price">
+                        R$ 300
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <a href="product.html">
+                        <!-- image size should be 680px by 830px -->
+                        <img class="medium" src="./images/Fig 1.png" alt="product 1">
+                    </a>
+                    <div class="card-body">
+                        <a href="product.html">
+                            <h2>Roupa Cara</h2>
+                        </a>
+                    </div>
+                    <div class="rating">
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star-o"></i></span>
+                    </div>
+                    <div class="price">
+                        R$ 300
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <a href="product.html">
+                        <!-- image size should be 680px by 830px -->
+                        <img class="medium" src="./images/Fig 1.png" alt="product 1">
+                    </a>
+                    <div class="card-body">
+                        <a href="product.html">
+                            <h2>Roupa Cara</h2>
+                        </a>
+                    </div>
+                    <div class="rating">
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star"></i></span>
+                        <span><i class="fa fa-star-half-o"></i></span>
+                        <span><i class="fa fa-star-o"></i></span>
+                    </div>
+                    <div class="price">
+                        R$ 300
+                    </div>
+                </div>
+
+
+
+
+
+            </div>
         </main>
 
 
