--- a/eCommerceTest/template/style.css
+++ b/eCommerceTest/template/style.css
@@ -36,6 +36,16 @@ html {
      background-color: #203040;
      color: white;
  }
+
+h1 {
+    font-size: 1.8rem;
+    padding: 1rem 0;
+}
+h2 {
+    font-size: 1.6rem;
+    padding: 1rem 0;
+}
+
 /* HEADER */
 /* remove the underline of the links, and change its color when hover mouse over it*/
 a {
@@ -55,7 +65,6 @@ header a {
     font-weight: bold;
 }
 
-
 .row{
     display: flex;
     flex-wrap: wrap; /*if no space available, create many lines*/
@@ -65,3 +74,36 @@ header a {
  .row.center {
      justify-content: center;
  }
+
+/* MAIN */
+ /* Image */
+ img {
+    border-radius: 0.5rem;
+ }
+ img.medium {
+    max-width: 29rem;
+    width: 100%;
+ }
+
+ /* Card */
+ .card {
+    border: 0.1rem #c0c0c0 solid;
+    background-color: #f8f8f8;
+    border-radius: 0.5rem;
+    margin: 1rem;
+ }
+ .card-body {
+     padding: 1rem;
+ }
+ .card-body > *{ /* everything inside the card body has a margin bottom */
+     margin-bottom: 0.5rem;
+ }
+ .price {
+     font-size: 2rem;
+ }
+
+ /* Rating */
+.rating span {
+    color: #f0c040;
+    margin: 0.1rem;
+}
